--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <div class="container left">
             <div class="content">
                 <span class="date">31 Octobre 2023</span>
-                <img src="https://images.unsplash.com/photo-1516589178581-6cd7833ae3b2?auto=format&fit=crop&w=400&q=80" alt="Notre rencontre" class="photo-frame">
+                <img src="Rencontre.JPG" alt="Notre rencontre" class="photo-frame">
                 <h2>Notre Rencontre</h2>
                 <p>Une pirate et un twister, ça dérape vite.</p>
             </div>
