Add two new images for Nouvel An 2023

--- a/index.html
+++ b/index.html
@@ -302,6 +302,8 @@
                 <div class="photo-grid">
                     <img src="nouvel_an_1.jpg" alt="Nouvel an 1" class="photo-frame">
                     <img src="nouvel_an_2.jpg" alt="Nouvel an 2" class="photo-frame">
+                    <img src="nouvel_an_3.jpg" alt="Nouvel an 3" class="photo-frame">
+                    <img src="nouvel_an_4.jpg" alt="Nouvel an 4" class="photo-frame">
                 </div>
                 <h2>Alison : "Tu es qui pour Robin ?"</h2>
                 <p>Après une arcade recousue et quelques mois d'Erasmus, les choses commencèrent à se concrétiser et tu as remué ciel et terre pour venir me voir à Valence.</p>
