Add photo grid for ski images in index.html

--- a/index.html
+++ b/index.html
@@ -313,7 +313,11 @@
         <div class="container left">
             <div class="content">
                 <span class="date">22 Février 2024</span>
-                <img src="ski.jpg" alt="Début" class="photo-frame">
+                <div class="photo-grid">
+                    <img src="ski_1.jpeg" alt="Ski 1" class="photo-frame">
+                    <img src="ski_2.jpeg" alt="Ski 2" class="photo-frame">
+                    <img src="ski_3.jpg" alt="Ski 3" class="photo-frame">
+                </div>
                 <h2>Le début d'une belle histoire</h2>
                 <p>Suite à 2 mois à vivre comme un vrai couple, nous décidons d'un weekend romantique entre ski, randonnée et visite de Lyon, et nous concluons en débutant une belle histoire.</p>
             </div>
