--- a/index.html
+++ b/index.html
@@ -326,7 +326,11 @@
         <div class="container right">
             <div class="content">
                 <span class="date">Mars 2024</span>
-                <img src="toulouse.jpg" alt="Toulouse" class="photo-frame">
+                <div class="photo-grid">
+                    <img src="Toulouse_1.jpg" alt="Toulouse 1" class="photo-frame">
+                    <img src="Toulouse_2.jpg" alt="Toulouse 2" class="photo-frame">
+                    <img src="Toulouse_3.jpeg" alt="Toulouse 3" class="photo-frame">
+                </div>
                 <h2>La toile d'araignée</h2>
                 <p>Même avec la distance nous arrivions à créer une relation. Tu es même venue me voir à Toulouse et nous y avons fait beaucoup de bêtises.</p>
             </div>
@@ -335,7 +339,10 @@
         <div class="container left">
             <div class="content">
                 <span class="date">Avril 2024</span>
-                <img src="https://images.unsplash.com/photo-1518568814500-bf0f8d125f46?auto=format&fit=crop&w=400&q=80" alt="Aujourd'hui" class="photo-frame">
+                <div class="photo-grid">
+                    <img src="Avril2024_1.jpg" alt="Avril 2024 1" class="photo-frame">
+                    <img src="Avril2024_2.jpg" alt="Avril 2024 2" class="photo-frame">
+                </div>
                 <h2>Une nouvelle randonnée</h2>
                 <p>Petit passage dans les montagnes roumaines avec du bon chocolat.</p>
             </div>
@@ -344,7 +351,7 @@
         <div class="container right">
             <div class="content">
                 <span class="date">Mai 2024</span>
-                <img src="https://images.unsplash.com/photo-1476514525535-07fb3b4ae5f1?auto=format&fit=crop&w=400&q=80" alt="Voyage" class="photo-frame">
+                <img src="Bal.jpg" alt="bal" class="photo-frame">
                 <h2>Le bal</h2>
                 <p>Ça n'a pas été voté, mais on a été les plus beaux de la soirée.</p>
             </div>
@@ -353,7 +360,15 @@
         <div class="container left">
             <div class="content">
                 <span class="date">Juillet 2024</span>
-                <img src="https://images.unsplash.com/photo-1518568814500-bf0f8d125f46?auto=format&fit=crop&w=400&q=80" alt="Aujourd'hui" class="photo-frame">
+                <div class="photo-grid">
+                    <img src="Juillet2024_1.jpeg" alt="Juillet 2024 1" class="photo-frame">
+                    <img src="Juillet2024_2.jpeg" alt="Juillet 2024 2" class="photo-frame">
+                    <img src="Juillet2024_3.jpeg" alt="Juillet 2024 3" class="photo-frame">
+                    <img src="Juillet2024_4.jpg" alt="Juillet 2024 4" class="photo-frame">
+                    <img src="Juillet2024_5.jpg" alt="Juillet 2024 5" class="photo-frame">
+                    <img src="Juillet2024_6.jpg" alt="Juillet 2024 6" class="photo-frame">
+                    <img src="Juillet2024_7.jpg" alt="Juillet 2024 7" class="photo-frame">
+                </div>
                 <h2>Notre première expérience de vie commune</h2>
                 <p>Pendant plus de 2 semaines nous en avons profité. Plage, randonnée (encore), visite de Carcassonne et un trajet retour EXCEPTIONNEL.</p>
             </div>
@@ -362,7 +377,18 @@
         <div class="container right">
             <div class="content">
                 <span class="date">Été 2024</span>
-                <img src="https://images.unsplash.com/photo-1476514525535-07fb3b4ae5f1?auto=format&fit=crop&w=400&q=80" alt="Voyage" class="photo-frame">
+                <div class="photo-grid">
+                    <img src="Ete2024_1.jpg" alt="Ete 2024 1" class="photo-frame">
+                    <img src="Ete2024_2.jpeg" alt="Ete 2024 2" class="photo-frame">
+                    <img src="Ete2024_3.jpg" alt="Ete 2024 3" class="photo-frame">
+                    <img src="Ete2024_4.jpeg" alt="Ete 2024 4" class="photo-frame">
+                    <img src="Ete2024_5.jpeg" alt="Ete 2024 5" class="photo-frame">
+                    <img src="Ete2024_6.jpg" alt="Ete 2024 6" class="photo-frame">
+                    <img src="Ete2024_7.jpg" alt="Ete 2024 7" class="photo-frame">
+                    <img src="Ete2024_8.jpeg" alt="Ete 2024 8" class="photo-frame">
+                    <img src="Ete2024_9.jpeg" alt="Ete 2024 9" class="photo-frame">
+                    <img src="Ete2024_10.jpg" alt="Ete 2024 10" class="photo-frame">
+                </div>
                 <h2>L'été magique</h2>
                 <p>Des vacances inoubliables, suivies d'un concert génial et de supers moments à Lyon pour finir !</p>
             </div>
@@ -371,7 +397,10 @@
         <div class="container left">
             <div class="content">
                 <span class="date">Octobre 2024</span>
-                <img src="https://images.unsplash.com/photo-1518568814500-bf0f8d125f46?auto=format&fit=crop&w=400&q=80" alt="Aujourd'hui" class="photo-frame">
+                <div class="photo-grid">
+                    <img src="Octobre2024_1.jpeg" alt="Octobre 2024 1" class="photo-frame">
+                    <img src="Octobre2024_2.jpg" alt="Octobre 2024 2" class="photo-frame">
+                </div>
                 <h2>Merde mon passeport !</h2>
                 <p>J'ai fait 3 descentes d'organes mais j'ai réussi à venir te voir, et ça valait le coup !</p>
             </div>
@@ -380,7 +409,15 @@
         <div class="container right">
             <div class="content">
                 <span class="date">Novembre 2024</span>
-                <img src="https://images.unsplash.com/photo-1476514525535-07fb3b4ae5f1?auto=format&fit=crop&w=400&q=80" alt="Voyage" class="photo-frame">
+                <div class="photo-grid">
+                    <img src="Novembre2024_1.jpeg" alt="Novembre 2024 1" class="photo-frame">
+                    <img src="Novembre2024_2.jpeg" alt="Novembre 2024 2" class="photo-frame">
+                    <img src="Novembre2024_3.jpeg" alt="Novembre 2024 3" class="photo-frame">
+                    <img src="Novembre2024_4.jpeg" alt="Novembre 2024 4" class="photo-frame">
+                    <img src="Novembre2024_5.jpg" alt="Novembre 2024 5" class="photo-frame">
+                    <img src="Novembre2024_6.jpg" alt="Novembre 2024 6" class="photo-frame">
+                    <img src="Novembre2024_7.jpg" alt="Novembre 2024 7" class="photo-frame">
+                </div>
                 <h2>On a vraiment fait tout ça en 1 mois ?</h2>
                 <p>Début novembre nous avons fait une randonnée magnifique en Roumanie où nous avons pu croiser un renard. Quelques semaines plus tard tu es venue me rendre visite à Paris. Nous avons exploré la ville, vu un match de l'équipe de France de rugby et fini avec de sacrées traces de griffures.</p>
             </div>
@@ -389,7 +426,14 @@
         <div class="container left">
             <div class="content">
                 <span class="date">Décembre 2024</span>
-                <img src="https://images.unsplash.com/photo-1518568814500-bf0f8d125f46?auto=format&fit=crop&w=400&q=80" alt="Aujourd'hui" class="photo-frame">
+                <div class="photo-grid">
+                    <img src="Decembre2024_1.jpg" alt="Décembre 2024 1" class="photo-frame">
+                    <img src="Decembre2024_2.jpg" alt="Décembre 2024 2" class="photo-frame">
+                    <img src="Decembre2024_3.jpg" alt="Décembre 2024 3" class="photo-frame">
+                    <img src="Decembre2024_4.jpeg" alt="Décembre 2024 4" class="photo-frame">
+                    <img src="Decembre2024_5.jpeg" alt="Décembre 2024 5" class="photo-frame">
+                    <img src="Decembre2024_6.jpg" alt="Décembre 2024 6" class="photo-frame">
+                </div>
                 <h2>Maladie</h2>
                 <p>Après avoir fêté mon anniversaire, nous sommes partis dans le Morvan puis dans les Pyrénées pour fêter le nouvel an. Malgré nos vomitos j'ai quand même passé de supers moments ! C'était quand même la première fois que l'on s'envoyait en l'air.</p>
             </div>
@@ -398,7 +442,16 @@
         <div class="container right">
             <div class="content">
                 <span class="date">Février 2025</span>
-                <img src="https://images.unsplash.com/photo-1476514525535-07fb3b4ae5f1?auto=format&fit=crop&w=400&q=80" alt="Voyage" class="photo-frame">
+                <div class="photo-grid">
+                    <img src="Fevrier_1.jpeg" alt="Fevrier 1" class="photo-frame">
+                    <img src="Fevrier_2.jpg" alt="Fevrier 2" class="photo-frame">
+                    <img src="Fevrier_3.jpg" alt="Fevrier 3" class="photo-frame">
+                    <img src="Fevrier_4.jpg" alt="Fevrier 4" class="photo-frame">
+                    <img src="Fevrier_5.jpeg" alt="Fevrier 5" class="photo-frame">
+                    <img src="Fevrier_6.jpg" alt="Fevrier 6" class="photo-frame">
+                    <img src="Fevrier_7.jpeg" alt="Fevrier 7" class="photo-frame">
+                    <img src="Fevrier_8.jpg" alt="Fevrier 8" class="photo-frame">
+                </div>
                 <h2>Pas de stage</h2>
                 <p>À la fin de mes partiels, nous avons passé de beaux moments ensemble pour la Saint-Valentin, au ski et à Budapest.</p>
             </div>
@@ -407,7 +460,10 @@
         <div class="container left">
             <div class="content">
                 <span class="date">Mars 2025</span>
-                <img src="https://images.unsplash.com/photo-1518568814500-bf0f8d125f46?auto=format&fit=crop&w=400&q=80" alt="Aujourd'hui" class="photo-frame">
+                <div class="photo-grid">
+                    <img src="Mars_1.jpg" alt="Mars 1" class="photo-frame">
+                    <img src="Mars_2.jpeg" alt="Mars 2" class="photo-frame">
+                </div>
                 <h2>Anniversaire</h2>
                 <p>Pour ton anniversaire j'ai fait l'erreur de t'offrir le pire cadeau possible : un coquetier. Désolé...</p>
             </div>
@@ -416,7 +472,13 @@
         <div class="container right">
             <div class="content">
                 <span class="date">Mai 2025</span>
-                <img src="https://images.unsplash.com/photo-1476514525535-07fb3b4ae5f1?auto=format&fit=crop&w=400&q=80" alt="Voyage" class="photo-frame">
+                <div class="photo-grid">
+                    <img src="Mai_1.jpg" alt="Mai 1" class="photo-frame">
+                    <img src="Mai_2.jpg" alt="Mai 2" class="photo-frame">
+                    <img src="Mai_3.jpg" alt="Mai 3" class="photo-frame">
+                    <img src="Mai_4.jpg" alt="Mai 4" class="photo-frame">
+                    <img src="Mai_5.jpeg" alt="Mai 5" class="photo-frame">
+                </div>
                 <h2>Gros match</h2>
                 <p>Pour que tu puisses me voir jouer au rugby, j'ai joué un match amical contre des Roumains. Et le drame est arrivé, mon genou s'est cassé.</p>
             </div>
@@ -425,7 +487,17 @@
         <div class="container left">
             <div class="content">
                 <span class="date">Été 2025</span>
-                <img src="https://images.unsplash.com/photo-1518568814500-bf0f8d125f46?auto=format&fit=crop&w=400&q=80" alt="Aujourd'hui" class="photo-frame">
+                <div class="photo-grid">
+                    <img src="Ete_1.jpeg" alt="Ete 1" class="photo-frame">
+                    <img src="Ete_2.jpeg" alt="Ete 2" class="photo-frame">
+                    <img src="Ete_3.jpeg" alt="Ete 3" class="photo-frame">
+                    <img src="Ete_4.jpg" alt="Ete 4" class="photo-frame">
+                    <img src="Ete_5.jpeg" alt="Ete 5" class="photo-frame">
+                    <img src="Ete_6.jpeg" alt="Ete 6" class="photo-frame">
+                    <img src="Ete_7.jpg" alt="Ete 7" class="photo-frame">
+                    <img src="Ete_8.jpeg" alt="Ete 8" class="photo-frame">
+                    <img src="Ete_9.jpg" alt="Ete 9" class="photo-frame">
+                </div>
                 <h2>J'ai pas les mots</h2>
                 <p>Encore une année de plus à me dire que c'était probablement l'un des meilleurs étés de ma vie. Entre le concert d'Imagine Dragons, nos vacances en Croatie (encore choqué de ton caca) et mon opération (oups).</p>
             </div>
@@ -434,7 +506,16 @@
         <div class="container right">
             <div class="content">
                 <span class="date">Décembre 2025</span>
-                <img src="https://images.unsplash.com/photo-1476514525535-07fb3b4ae5f1?auto=format&fit=crop&w=400&q=80" alt="Voyage" class="photo-frame">
+                <div class="photo-grid">
+                    <img src="Decembre_1.jpg" alt="Decembre 1" class="photo-frame">
+                    <img src="Decembre_2.jpg" alt="Decembre 2" class="photo-frame">
+                    <img src="Decembre_3.jpg" alt="Decembre 3" class="photo-frame">
+                    <img src="Decembre_4.jpg" alt="Decembre 4" class="photo-frame">
+                    <img src="Decembre_5.jpg" alt="Decembre 5" class="photo-frame">
+                    <img src="Decembre_6.jpg" alt="Decembre 6" class="photo-frame">
+                    <img src="Decembre_7.jpg" alt="Decembre 7" class="photo-frame">
+                    <img src="Decembre_8.jpg" alt="Decembre 8" class="photo-frame">
+                </div>
                 <h2>Ça devient sérieux</h2>
                 <p>Après avoir fêté mon anniversaire, j'ai rencontré la belle-famille. C'était génial, je suis trop heureux d'avoir passé cette étape. Après le nouvel an j'ai eu une autre occasion de draguer les mamies !</p>
             </div>
@@ -443,7 +524,6 @@
         <div class="container left">
             <div class="content">
                 <span class="date">Aujourd'hui</span>
-                <img src="https://images.unsplash.com/photo-1518568814500-bf0f8d125f46?auto=format&fit=crop&w=400&q=80" alt="Aujourd'hui" class="photo-frame">
                 <h2>Je t'aime</h2>
                 <p>Merci d'être toi. Merci d'être là quand j'ai besoin de toi.</p>
             </div>
