--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@
             <div class="content">
                 <span class="date">22 Février 2024</span>
                 <div class="photo-grid">
-                    <img src="ski_1.jpeg" alt="Ski 1" class="photo-frame">
-                    <img src="ski_2.jpeg" alt="Ski 2" class="photo-frame">
-                    <img src="ski_3.jpg" alt="Ski 3" class="photo-frame">
+                    <img src="Ski_1.jpg" alt="Ski 1" class="photo-frame">
+                    <img src="Ski_2.jpeg" alt="Ski 2" class="photo-frame">
+                    <img src="Ski_3.jpg" alt="Ski 3" class="photo-frame">
                 </div>
                 <h2>Le début d'une belle histoire</h2>
                 <p>Suite à 2 mois à vivre comme un vrai couple, nous décidons d'un weekend romantique entre ski, randonnée et visite de Lyon, et nous concluons en débutant une belle histoire.</p>
@@ -507,14 +507,14 @@
             <div class="content">
                 <span class="date">Décembre 2025</span>
                 <div class="photo-grid">
-                    <img src="Decembre_1.jpg" alt="Decembre 1" class="photo-frame">
-                    <img src="Decembre_2.jpg" alt="Decembre 2" class="photo-frame">
+                    <img src="Decembre_1.jpeg" alt="Decembre 1" class="photo-frame">
+                    <img src="Decembre_2.jpeg" alt="Decembre 2" class="photo-frame">
                     <img src="Decembre_3.jpg" alt="Decembre 3" class="photo-frame">
                     <img src="Decembre_4.jpg" alt="Decembre 4" class="photo-frame">
                     <img src="Decembre_5.jpg" alt="Decembre 5" class="photo-frame">
-                    <img src="Decembre_6.jpg" alt="Decembre 6" class="photo-frame">
+                    <img src="Decembre_6.jpeg" alt="Decembre 6" class="photo-frame">
                     <img src="Decembre_7.jpg" alt="Decembre 7" class="photo-frame">
-                    <img src="Decembre_8.jpg" alt="Decembre 8" class="photo-frame">
+                    <img src="Decembre_8.jpeg" alt="Decembre 8" class="photo-frame">
                 </div>
                 <h2>Ça devient sérieux</h2>
                 <p>Après avoir fêté mon anniversaire, j'ai rencontré la belle-famille. C'était génial, je suis trop heureux d'avoir passé cette étape. Après le nouvel an j'ai eu une autre occasion de draguer les mamies !</p>
