--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
             <div class="content">
                 <span class="date">Nouvel an 2023</span>
                 <div class="photo-grid">
-                    <img src="nouvel_an_1.jpg" alt="Nouvel an 1" class="photo-frame">
-                    <img src="nouvel_an_2.jpg" alt="Nouvel an 2" class="photo-frame">
-                    <img src="nouvel_an_3.jpg" alt="Nouvel an 3" class="photo-frame">
-                    <img src="nouvel_an_4.jpg" alt="Nouvel an 4" class="photo-frame">
+                    <img src="nouvel_an_1.JPG" alt="Nouvel an 1" class="photo-frame">
+                    <img src="nouvel_an_2.JPG" alt="Nouvel an 2" class="photo-frame">
+                    <img src="nouvel_an_3.JPG" alt="Nouvel an 3" class="photo-frame">
+                    <img src="nouvel_an_4.JPG" alt="Nouvel an 4" class="photo-frame">
                 </div>
                 <h2>Alison : "Tu es qui pour Robin ?"</h2>
                 <p>Après une arcade recousue et quelques mois d'Erasmus, les choses commencèrent à se concrétiser et tu as remué ciel et terre pour venir me voir à Valence.</p>
@@ -314,7 +314,7 @@
             <div class="content">
                 <span class="date">22 Février 2024</span>
                 <div class="photo-grid">
-                    <img src="Ski_1.jpg" alt="Ski 1" class="photo-frame">
+                    <img src="Ski_1.JPG" alt="Ski 1" class="photo-frame">
                     <img src="Ski_2.jpeg" alt="Ski 2" class="photo-frame">
                     <img src="Ski_3.jpg" alt="Ski 3" class="photo-frame">
                 </div>
@@ -327,8 +327,8 @@
             <div class="content">
                 <span class="date">Mars 2024</span>
                 <div class="photo-grid">
-                    <img src="Toulouse_1.jpg" alt="Toulouse 1" class="photo-frame">
-                    <img src="Toulouse_2.jpg" alt="Toulouse 2" class="photo-frame">
+                    <img src="Toulouse_1.JPG" alt="Toulouse 1" class="photo-frame">
+                    <img src="Toulouse_2.JPG" alt="Toulouse 2" class="photo-frame">
                     <img src="Toulouse_3.jpeg" alt="Toulouse 3" class="photo-frame">
                 </div>
                 <h2>La toile d'araignée</h2>
@@ -340,8 +340,8 @@
             <div class="content">
                 <span class="date">Avril 2024</span>
                 <div class="photo-grid">
-                    <img src="Avril2024_1.jpg" alt="Avril 2024 1" class="photo-frame">
-                    <img src="Avril2024_2.jpg" alt="Avril 2024 2" class="photo-frame">
+                    <img src="Avril2024_1.JPG" alt="Avril 2024 1" class="photo-frame">
+                    <img src="Avril2024_2.JPG" alt="Avril 2024 2" class="photo-frame">
                 </div>
                 <h2>Une nouvelle randonnée</h2>
                 <p>Petit passage dans les montagnes roumaines avec du bon chocolat.</p>
@@ -351,7 +351,7 @@
         <div class="container right">
             <div class="content">
                 <span class="date">Mai 2024</span>
-                <img src="Bal.jpg" alt="bal" class="photo-frame">
+                <img src="Bal.JPG" alt="bal" class="photo-frame">
                 <h2>Le bal</h2>
                 <p>Ça n'a pas été voté, mais on a été les plus beaux de la soirée.</p>
             </div>
@@ -364,10 +364,10 @@
                     <img src="Juillet2024_1.jpeg" alt="Juillet 2024 1" class="photo-frame">
                     <img src="Juillet2024_2.jpeg" alt="Juillet 2024 2" class="photo-frame">
                     <img src="Juillet2024_3.jpeg" alt="Juillet 2024 3" class="photo-frame">
-                    <img src="Juillet2024_4.jpg" alt="Juillet 2024 4" class="photo-frame">
+                    <img src="Juillet2024_4.JPG" alt="Juillet 2024 4" class="photo-frame">
                     <img src="Juillet2024_5.jpg" alt="Juillet 2024 5" class="photo-frame">
-                    <img src="Juillet2024_6.jpg" alt="Juillet 2024 6" class="photo-frame">
-                    <img src="Juillet2024_7.jpg" alt="Juillet 2024 7" class="photo-frame">
+                    <img src="Juillet2024_6.JPG" alt="Juillet 2024 6" class="photo-frame">
+                    <img src="Juillet2024_7.JPG" alt="Juillet 2024 7" class="photo-frame">
                 </div>
                 <h2>Notre première expérience de vie commune</h2>
                 <p>Pendant plus de 2 semaines nous en avons profité. Plage, randonnée (encore), visite de Carcassonne et un trajet retour EXCEPTIONNEL.</p>
@@ -378,16 +378,16 @@
             <div class="content">
                 <span class="date">Été 2024</span>
                 <div class="photo-grid">
-                    <img src="Ete2024_1.jpg" alt="Ete 2024 1" class="photo-frame">
+                    <img src="Ete2024_1.JPG" alt="Ete 2024 1" class="photo-frame">
                     <img src="Ete2024_2.jpeg" alt="Ete 2024 2" class="photo-frame">
-                    <img src="Ete2024_3.jpg" alt="Ete 2024 3" class="photo-frame">
+                    <img src="Ete2024_3.JPG" alt="Ete 2024 3" class="photo-frame">
                     <img src="Ete2024_4.jpeg" alt="Ete 2024 4" class="photo-frame">
                     <img src="Ete2024_5.jpeg" alt="Ete 2024 5" class="photo-frame">
                     <img src="Ete2024_6.jpg" alt="Ete 2024 6" class="photo-frame">
-                    <img src="Ete2024_7.jpg" alt="Ete 2024 7" class="photo-frame">
+                    <img src="Ete2024_7.JPG" alt="Ete 2024 7" class="photo-frame">
                     <img src="Ete2024_8.jpeg" alt="Ete 2024 8" class="photo-frame">
                     <img src="Ete2024_9.jpeg" alt="Ete 2024 9" class="photo-frame">
-                    <img src="Ete2024_10.jpg" alt="Ete 2024 10" class="photo-frame">
+                    <img src="Ete2024_10.JPG" alt="Ete 2024 10" class="photo-frame">
                 </div>
                 <h2>L'été magique</h2>
                 <p>Des vacances inoubliables, suivies d'un concert génial et de supers moments à Lyon pour finir !</p>
@@ -399,7 +399,7 @@
                 <span class="date">Octobre 2024</span>
                 <div class="photo-grid">
                     <img src="Octobre2024_1.jpeg" alt="Octobre 2024 1" class="photo-frame">
-                    <img src="Octobre2024_2.jpg" alt="Octobre 2024 2" class="photo-frame">
+                    <img src="Octobre2024_2.JPG" alt="Octobre 2024 2" class="photo-frame">
                 </div>
                 <h2>Merde mon passeport !</h2>
                 <p>J'ai fait 3 descentes d'organes mais j'ai réussi à venir te voir, et ça valait le coup !</p>
@@ -414,9 +414,9 @@
                     <img src="Novembre2024_2.jpeg" alt="Novembre 2024 2" class="photo-frame">
                     <img src="Novembre2024_3.jpeg" alt="Novembre 2024 3" class="photo-frame">
                     <img src="Novembre2024_4.jpeg" alt="Novembre 2024 4" class="photo-frame">
-                    <img src="Novembre2024_5.jpg" alt="Novembre 2024 5" class="photo-frame">
+                    <img src="Novembre2024_5.JPG" alt="Novembre 2024 5" class="photo-frame">
                     <img src="Novembre2024_6.jpg" alt="Novembre 2024 6" class="photo-frame">
-                    <img src="Novembre2024_7.jpg" alt="Novembre 2024 7" class="photo-frame">
+                    <img src="Novembre2024_7.JPG" alt="Novembre 2024 7" class="photo-frame">
                 </div>
                 <h2>On a vraiment fait tout ça en 1 mois ?</h2>
                 <p>Début novembre nous avons fait une randonnée magnifique en Roumanie où nous avons pu croiser un renard. Quelques semaines plus tard tu es venue me rendre visite à Paris. Nous avons exploré la ville, vu un match de l'équipe de France de rugby et fini avec de sacrées traces de griffures.</p>
@@ -427,12 +427,12 @@
             <div class="content">
                 <span class="date">Décembre 2024</span>
                 <div class="photo-grid">
-                    <img src="Decembre2024_1.jpg" alt="Décembre 2024 1" class="photo-frame">
-                    <img src="Decembre2024_2.jpg" alt="Décembre 2024 2" class="photo-frame">
-                    <img src="Decembre2024_3.jpg" alt="Décembre 2024 3" class="photo-frame">
+                    <img src="Decembre2024_1.JPG" alt="Décembre 2024 1" class="photo-frame">
+                    <img src="Decembre2024_2.JPG" alt="Décembre 2024 2" class="photo-frame">
+                    <img src="Decembre2024_3.JPG" alt="Décembre 2024 3" class="photo-frame">
                     <img src="Decembre2024_4.jpeg" alt="Décembre 2024 4" class="photo-frame">
                     <img src="Decembre2024_5.jpeg" alt="Décembre 2024 5" class="photo-frame">
-                    <img src="Decembre2024_6.jpg" alt="Décembre 2024 6" class="photo-frame">
+                    <img src="Decembre2024_6.JPG" alt="Décembre 2024 6" class="photo-frame">
                 </div>
                 <h2>Maladie</h2>
                 <p>Après avoir fêté mon anniversaire, nous sommes partis dans le Morvan puis dans les Pyrénées pour fêter le nouvel an. Malgré nos vomitos j'ai quand même passé de supers moments ! C'était quand même la première fois que l'on s'envoyait en l'air.</p>
@@ -444,13 +444,13 @@
                 <span class="date">Février 2025</span>
                 <div class="photo-grid">
                     <img src="Fevrier_1.jpeg" alt="Fevrier 1" class="photo-frame">
-                    <img src="Fevrier_2.jpg" alt="Fevrier 2" class="photo-frame">
-                    <img src="Fevrier_3.jpg" alt="Fevrier 3" class="photo-frame">
-                    <img src="Fevrier_4.jpg" alt="Fevrier 4" class="photo-frame">
+                    <img src="Fevrier_2.JPG" alt="Fevrier 2" class="photo-frame">
+                    <img src="Fevrier_3.JPG" alt="Fevrier 3" class="photo-frame">
+                    <img src="Fevrier_4.JPG" alt="Fevrier 4" class="photo-frame">
                     <img src="Fevrier_5.jpeg" alt="Fevrier 5" class="photo-frame">
-                    <img src="Fevrier_6.jpg" alt="Fevrier 6" class="photo-frame">
+                    <img src="Fevrier_6.JPG" alt="Fevrier 6" class="photo-frame">
                     <img src="Fevrier_7.jpeg" alt="Fevrier 7" class="photo-frame">
-                    <img src="Fevrier_8.jpg" alt="Fevrier 8" class="photo-frame">
+                    <img src="Fevrier_8.JPG" alt="Fevrier 8" class="photo-frame">
                 </div>
                 <h2>Pas de stage</h2>
                 <p>À la fin de mes partiels, nous avons passé de beaux moments ensemble pour la Saint-Valentin, au ski et à Budapest.</p>
@@ -461,7 +461,7 @@
             <div class="content">
                 <span class="date">Mars 2025</span>
                 <div class="photo-grid">
-                    <img src="Mars_1.jpg" alt="Mars 1" class="photo-frame">
+                    <img src="Mars_1.JPG" alt="Mars 1" class="photo-frame">
                     <img src="Mars_2.jpeg" alt="Mars 2" class="photo-frame">
                 </div>
                 <h2>Anniversaire</h2>
@@ -473,10 +473,10 @@
             <div class="content">
                 <span class="date">Mai 2025</span>
                 <div class="photo-grid">
-                    <img src="Mai_1.jpg" alt="Mai 1" class="photo-frame">
-                    <img src="Mai_2.jpg" alt="Mai 2" class="photo-frame">
-                    <img src="Mai_3.jpg" alt="Mai 3" class="photo-frame">
-                    <img src="Mai_4.jpg" alt="Mai 4" class="photo-frame">
+                    <img src="Mai_1.JPG" alt="Mai 1" class="photo-frame">
+                    <img src="Mai_2.JPG" alt="Mai 2" class="photo-frame">
+                    <img src="Mai_3.JPG" alt="Mai 3" class="photo-frame">
+                    <img src="Mai_4.JPG" alt="Mai 4" class="photo-frame">
                     <img src="Mai_5.jpeg" alt="Mai 5" class="photo-frame">
                 </div>
                 <h2>Gros match</h2>
@@ -494,9 +494,9 @@
                     <img src="Ete_4.jpg" alt="Ete 4" class="photo-frame">
                     <img src="Ete_5.jpeg" alt="Ete 5" class="photo-frame">
                     <img src="Ete_6.jpeg" alt="Ete 6" class="photo-frame">
-                    <img src="Ete_7.jpg" alt="Ete 7" class="photo-frame">
+                    <img src="Ete_7.JPG" alt="Ete 7" class="photo-frame">
                     <img src="Ete_8.jpeg" alt="Ete 8" class="photo-frame">
-                    <img src="Ete_9.jpg" alt="Ete 9" class="photo-frame">
+                    <img src="Ete_9.JPG" alt="Ete 9" class="photo-frame">
                 </div>
                 <h2>J'ai pas les mots</h2>
                 <p>Encore une année de plus à me dire que c'était probablement l'un des meilleurs étés de ma vie. Entre le concert d'Imagine Dragons, nos vacances en Croatie (encore choqué de ton caca) et mon opération (oups).</p>
@@ -509,11 +509,11 @@
                 <div class="photo-grid">
                     <img src="Decembre_1.jpeg" alt="Decembre 1" class="photo-frame">
                     <img src="Decembre_2.jpeg" alt="Decembre 2" class="photo-frame">
-                    <img src="Decembre_3.jpg" alt="Decembre 3" class="photo-frame">
-                    <img src="Decembre_4.jpg" alt="Decembre 4" class="photo-frame">
-                    <img src="Decembre_5.jpg" alt="Decembre 5" class="photo-frame">
+                    <img src="Decembre_3.JPG" alt="Decembre 3" class="photo-frame">
+                    <img src="Decembre_4.JPG" alt="Decembre 4" class="photo-frame">
+                    <img src="Decembre_5.JPG" alt="Decembre 5" class="photo-frame">
                     <img src="Decembre_6.jpeg" alt="Decembre 6" class="photo-frame">
-                    <img src="Decembre_7.jpg" alt="Decembre 7" class="photo-frame">
+                    <img src="Decembre_7.JPG" alt="Decembre 7" class="photo-frame">
                     <img src="Decembre_8.jpeg" alt="Decembre 8" class="photo-frame">
                 </div>
                 <h2>Ça devient sérieux</h2>
