Enhance paragraph with dinner details
Added additional context about a dinner with the user's sister.

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     <img src="nouvel_an_4.JPG" alt="Nouvel an 4" class="photo-frame">
                 </div>
                 <h2>Alison : "Tu es qui pour Robin ?"</h2>
-                <p>Après une arcade recousue et quelques mois d'Erasmus, les choses commencèrent à se concrétiser et tu as remué ciel et terre pour venir me voir à Valence.</p>
+                <p>Après une arcade recousue et quelques mois d'Erasmus, les choses commencèrent à se concrétiser et tu as remué ciel et terre pour venir me voir à Valence. Pendant un diner avec mes soeur tu as même pu profiter d'un moment génant avec ma soeur.</p>
             </div>
         </div>
 
